--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "824831811@qq.com",
   "license": "MIT",
   "dependencies": {
-    "normalize.css": "^8.0.0",
     "github-markdown-css": "^2.10.0",
-    "markdown-it": "^8.4.1"
+    "markdown-it": "^8.4.1",
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.0",
+    "sass-loader": "^7.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
