--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "ylui-app-store",
   "scripts": {
-    "start": "http-server ./docs"
+    "start": "http-server ./docs -i"
   },
   "repository": {
     "type": "git",
@@ -11,7 +11,7 @@
   },
   "author": "yuri2peter@qq.com",
   "license": "MIT",
-  "dependencies": { },
+  "dependencies": {},
   "devDependencies": {
     "http-server": "^0.11.1"
   }
